# class-scraper-concept-rust

./: .env.example  .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: main.rs  prisma.rs
src/daemon/: mod.rs
src/database/: mod.rs  prisma.rs
src/logs/: mod.rs
