[package]
name = "webscraper"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
reqwest = {version = "0.11.17", features = ["json"]}
tokio = {version = "1.28.1", features = ["full"]}
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
serde = "1.0.163"
dotenv = "0.15.0"

[workspace]
members = [
  "prisma-cli"
]
