[package]
name = "cd-class-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
reqwest = {version = "0.11.17", features = ["json"]}
tokio = {version = "1.28.1", features = ["full"]}
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" , default-features = false, features = ["mysql"] }
serde = "1.0.163"
dotenv = "0.15.0"
log = "0.4.17"
simple_logger = "4.1.0"
serde_json = "1.0.96"

[workspace]
members = [
  "prisma-cli"
]
